--- a/src/app/components/home/home.css
+++ b/src/app/components/home/home.css
@@ -2,7 +2,7 @@
   width: 100%;
   height: 100vh;
   background:   linear-gradient(rgba(255, 255, 255, 0.4), rgba(255, 255, 255, 0.4)),
-                url('assets/banner.jpg') center/cover no-repeat fixed; /* 'fixed' adds a parallax feel */
+                url('/assets/banner.jpg') center/cover no-repeat fixed; /* 'fixed' adds a parallax feel */
   display: flex;
   justify-content: center;
   align-items: center;
