--- a/src/app/components/navbar/navbar.html
+++ b/src/app/components/navbar/navbar.html
@@ -7,9 +7,9 @@
   </div>
 
   <ul [class.active]="menuOpen">
-    <li><a routerLink="/">Home</a></li>
-    <li><a routerLink="/products">Shop</a></li>
-    <li><a routerLink="/about">About</a></li>
-    <li><a routerLink="/contact">Contact</a></li>
+    <li><a routerLink="/" (click)="closeMenu()">Home</a></li>
+    <li><a routerLink="/products" (click)="closeMenu()">Shop</a></li>
+    <li><a routerLink="/about" (click)="closeMenu()">About</a></li>
+    <li><a routerLink="/contact" (click)="closeMenu()">Contact</a></li>
   </ul>
 </nav>
